HTML formatting on new collectors pages fixed.

--- a/index.html
+++ b/index.html
@@ -1529,7 +1529,7 @@
       <section>
         <h2>Shenandoah</h2>
         <span style="font-size:0.8em;text-align:left;">
-          <span class="dimtext">(Redhat &#8674; OpenJDK)</span>
+          <span class="dimtext">(Redhat &#8674; OpenJDK)</span><p/>
           <ul style="font-size: 0.75em"><br/>
             <li><span class="color2">Region-based, non-generational collector</span>, based on the G1GC.</li><br/>
             <li>Adds an indirection, called <span class="color1">Brooks Pointer</span> (<span class="color3"><sub>*</sub> &darr;</span>) to each object, GC threads can compact heap while app is running.</li><br/>
@@ -1555,7 +1555,7 @@
       <section>
         <h2>ZGC</h2>
         <span style="font-size:0.8em;text-align:left;">
-          <span class="dimtext">(Oracle &#8674; OpenJDK)</span>
+          <span class="dimtext">(Oracle &#8674; OpenJDK)</span><p/>
           <ul style="font-size: 0.8em"><br/>
             <li><span class="color2">Region-based, non-generational collector</span>, based on G1GC.</li><br/>
             <li>Uses <span class="color1">colored pointers</span> with <span class="color1">load barriers</span> (<span class="color3"><sub>*</sub> &darr;</span>) to allow for concurrent ops.</li><br/>
@@ -1581,7 +1581,7 @@
       <section>
         <h2>Epsilon (or No GC)</h2>
         <span style="font-size:0.8em;text-align:left;">
-          <span class="dimtext">(Redhat &#8674; OpenJDK)</span>
+          <span class="dimtext">(Redhat &#8674; OpenJDK)</span><p/>
           <ul style="font-size: 0.75em"><br/>
             <li>Handles memory allocation but <em class="color2">does not actually reclaim memory</em>.</li><br/>
             <li><span class="color2">Completely passive GC</span> with just bounded memory allocation and lowest latency guarantees.</li><br/>
